# llmrs

./: .gitignore  Cargo.toml  README
src/: dataloader.rs  gpt2.rs  main.rs  operator.rs  passes.rs  random_sample.rs  tokenizer.rs
src/common/: compute.rs  mod.rs  model.rs  operator.rs  storage.rs  temp.rs  tensor.rs  weights.rs
