[package]
name = "llmrs"
version = "0.1.0"
edition = "2021"

[dependencies]
gemm = "0.18.0"
rayon = "1.9.0"
tensor = { git = "https://github.com/InfiniTensor/InfiniLM.git", branch = "dev" }
gguf = { git = "https://github.com/InfiniTensor/InfiniLM.git", branch = "dev" }
test-utils = { git = "https://github.com/InfiniTensor/InfiniLM.git", branch = "dev" }