[package]
name = "llmrs"
version = "0.1.0"
edition = "2021"

[dependencies]
gemm = "0.18.0"
rayon = "1.9.0"
tensor = { git = "https://github.com/InfiniTensor/InfiniLM.git", branch = "dev" }
gguf = { git = "https://github.com/InfiniTensor/InfiniLM.git", branch = "dev" }
common = { git = "https://github.com/InfiniTensor/InfiniLM.git", branch = "dev" }
operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "93d84ae", default-features = false }